--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "firebase": "^7.6.2",
         "firebase-admin": "^8.9.0",
         "isomorphic-unfetch": "2.0.0",
+        "moment": "^2.24.0",
         "next": "latest",
+        "prop-types": "^15.7.2",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
         "session-file-store": "^1.0.0"
